@@ -1,6 +1,7 @@
 JA2-Stracciatella Continued
 ---------------------------
 
+ - Fixed bug #48 (Unnamed civilians disappear)
  - Fixed crashes on Mac OS X
  - On Linux and Mac OS X, SHIFT can be used of ALT to move backward
 
